--- a/scss/colors.scss
+++ b/scss/colors.scss
@@ -1,18 +1,3 @@
-$primary: #ff5400;
-
-$font-light: #fff;
-$font-gray: #778;
-$font-dark: #000;
-
-$border-light: #fff;
-$border-gray-light: #a7a7a7;
-$border-gray: #444444;
-
-$background-light: #fff;
-$background-gray-light: #eee;
-$background-gray: #a7a7a7;
-$background-gray-dark: #363636;
-$background-dark: #151515;
-$background-dark-absolute: #000;
-
-$success: #69af00;
+$gris: #3d3d3d;
+$gris2: #6f6f6f;
+$naranja: #da552f;
