--- a/scss/global.scss
+++ b/scss/global.scss
@@ -12,12 +12,21 @@ html {
 body {
   font-size: 1.6rem; /**16px */
   line-height: 1.5;
+  font-family: 'PT Sans', sans-serif;
 }
 h1,
 h2,
 h3 {
   margin: 0 0 2rem 0;
   line-height: 1.5;
+}
+h1,
+h2 {
+  font-family: 'Roboto Slab', serif;
+  font-weight: 700;
+}
+h3 {
+  font-family: 'PT Sans', sans-serif;
 }
 ul {
   list-style: none;
