--- a/components/ui/Formulario.scss
+++ b/components/ui/Formulario.scss
@@ -38,3 +38,14 @@
     cursor: pointer;
   }
 }
+
+.error {
+  padding: 0.5rem;
+  font-family: 'PT Sans', sans-serif;
+  font-weight: 700;
+  font-size: 1.4rem;
+  color: rgb(255, 0, 0);
+  text-align: left;
+  text-transform: uppercase;
+  margin: 2rem 0;
+}
