--- a/components/ui/Formulario.scss
+++ b/components/ui/Formulario.scss
@@ -6,6 +6,13 @@
   max-width: 600px;
   width: 95%;
   margin: 5rem auto 0 auto;
+
+  fieldset {
+    margin: 2rem 0;
+    border: 2px solid #e1e1e1;
+    font-size: 2rem;
+    padding: 2rem;
+  }
 }
 .campo {
   margin-bottom: 2rem;
@@ -17,9 +24,13 @@
     font-size: 1.8rem;
   }
 
-  input {
+  input,
+  textarea {
     flex: 1;
     padding: 1rem;
+  }
+  textarea {
+    height: 400px;
   }
 }
 .inputSubmit {
