mostrando producto en la pagina de inicio

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -4,3 +4,4 @@
 
 @import '../components/layout/Header.scss';
 @import '../components/ui/Formulario.scss';
+@import '../components/layout/DetallesProducto.scss';
