agregando contenido y seccion de comentarios

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -5,3 +5,4 @@
 @import '../components/layout/Header.scss';
 @import '../components/ui/Formulario.scss';
 @import '../components/layout/DetallesProducto.scss';
+@import '../pages/productos/Producto.scss';
